--- a/frontend/hugo.toml
+++ b/frontend/hugo.toml
@@ -1,6 +1,6 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://sengweiyeoh.com/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'sengweiyeoh.com'
 
 [taxonomies]
   # Disable default taxonomies
