--- a/.github/workflows/front-end-cicd.yaml
+++ b/.github/workflows/front-end-cicd.yaml
@@ -1,19 +1,33 @@
 name: Update Cloud Resume Frontend
+
 on:
   push:
     branches:
       - main
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - uses: jakejarvis/s3-sync-action@master
-    with:
-        args: --acl public-read --follow-symlinks --delete
+
     env:
-      AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: 'us-east-1'  
-      SOURCE_DIR: 'frontend/public' 
+      AWS_REGION: 'us-east-1'
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: peaceiris/actions-hugo@v3
+        with:
+          hugo-version: 'latest'
+
+      - name: Build Hugo site
+        run: cd frontend && hugo --minify
+
+      - uses: reggionick/s3-deploy@v4
+        with:
+          folder: frontend/public
+          bucket: ${{ secrets.S3_BUCKET }}
+          bucket-region: ${{ secrets.S3_BUCKET_REGION }}
+          dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+          delete-removed: true
+          files-to-include: '{.*/**,**}'
