text explicit direction to use private acl

--- a/.github/workflows/front-end-cicd.yaml
+++ b/.github/workflows/front-end-cicd.yaml
@@ -31,3 +31,4 @@ jobs:
           dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
           delete-removed: true
           files-to-include: '{.*/**,**}'
+          private: false
