--- a/.github/workflows/front-end-cicd.yaml
+++ b/.github/workflows/front-end-cicd.yaml
@@ -1,34 +1,47 @@
 name: Update Cloud Resume Frontend
-
 on:
   push:
     branches:
       - main
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: 'us-east-1'
+      AWS_REGION: us-east-1
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: peaceiris/actions-hugo@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install Hugo
+        uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
 
       - name: Build Hugo site
         run: cd frontend && hugo --minify
 
-      - uses: reggionick/s3-deploy@v4
+      - name: Sync to S3 (no ACLs)
+        uses: aws-actions/aws-s3-sync@v2
         with:
-          folder: frontend/public
-          bucket: ${{ secrets.S3_BUCKET }}
-          bucket-region: ${{ secrets.S3_BUCKET_REGION }}
-          dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
-          delete-removed: true
-          files-to-include: '{.*/**,**}'
-          private: false
+          source_dir: 'frontend/public'
+          dest_bucket: ${{ secrets.S3_BUCKET }}
+          dest_region: ${{ secrets.S3_BUCKET_REGION }}
+          delete: true
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Invalidate CloudFront cache
+        uses: aws-actions/aws-cloudfront-invalidate@v1
+        with:
+          distribution-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+          paths: '/*'
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
