--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "tailwind.config.js",
   "scripts": {
-    "build-css": "npx postcss ./assets/css/main.css -o ./static/css/main.css"
+    "build-css": "npx postcss ./assets/css/main.css -o ./static/css/main.css",
+    "watch-css": "npx postcss ./assets/css/main.css -o ./static/css/main.css --watch",
+    "dev": "npm run build-css && hugo server",
+    "build": "npm run build-css && hugo"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +18,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
+    "postcss-import": "^16.1.1",
     "tailwindcss": "^4.1.11"
   }
 }
